--- a/html and css/fit-shop.css
+++ b/html and css/fit-shop.css
@@ -21,6 +21,9 @@
     margin: 1px;
     height: 100%;
 }
+.top-bar-section h1{
+    font-family: 'Nunito', sans-serif;
+}
 
 #top-bar-button{
     position: relative;
@@ -32,5 +35,68 @@
 }
 
 #menu-bar{
-    
+  
+    text-align: center;
+    width: 100%;
+    margin: 0 0 10 0;
+    height: 70px;
+    background-color: #51BEA5;
+
+
+
 }
+#menu-bar-container{
+    color: white;
+    background-color: #51BEA5;
+    width: 100%;
+    font-size: 13px;
+}
+#menu-bar-spacing{
+    width: 100%;
+    margin: 0 auto;
+    height: 40px;
+}
+.clear{
+    clear:both;
+}
+.no-border{
+    border:none !important;
+}
+#menu-bar p{
+
+    color: white;
+    font-family: 'Nunito', sans-serif;
+    /* text-decoration: none;  */
+    margin: 20px;
+    padding: 0px 10px 0px 10px;
+    border-right: 1px solid white;
+    font-size: 20px;
+    height: 60px;
+    display:inline-block;
+    position: relative;
+    top: -10px;
+    /* float:left; */
+
+} 
+#page-container{
+    width: 100%;
+    margin: 0 auto;
+}
+#main-image{
+    background-color: red;
+    height: 100%;
+
+}
+#main-photo{
+    border: 3px solid black;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    left: 40%;
+    top: 40%;
+
+   
+}
+
+
+ 
