--- a/pages/fit-shop.module.css
+++ b/pages/fit-shop.module.css
@@ -8,7 +8,7 @@
   margin: 0 auto;
 }
 
-#body {
+.body {
   padding: 0;
   margin: 0;
 }
@@ -84,34 +84,16 @@
   background-color: white;
   height: 100%;
 }
-.leftButton {
-  position: relative;
-  top: 250px;
-  left: 500px;
-  float: left;
-}
-.rightButton {
-  position: relative;
-  top: 250px;
-  left: -550px;
-  float: right;
-}
 .mainPhoto {
   border: 3px solid black;
   width: 400px;
   height: 400px;
-  position: absolute;
-
-  left: 38%;
-  top: 30%;
 }
 .buyButton {
   background-color: #2e6386;
   color: white;
   font-size: 25px;
   height: 50px;
-  width: 300px;
-  position: relative;
-  top: 550px;
-  left: 700px;
+  width: 200px;
+  margin-top: 20px;
 }
